tests/ui/parser/issues/issue-43692.rs
fn main() {
    '\u{_10FFFF}'; //~ ERROR invalid start of unicode escape
}
